introduce invisible clickable/touchable areas aside the responsive menus that allow closing of these menus, fixes #9733

--- a/resources/assets/stylesheets/less/responsive.less
+++ b/resources/assets/stylesheets/less/responsive.less
@@ -10,13 +10,13 @@
 // Responsive main navigation (hamburger navigation to the left)
 #responsive-container {
     display: none;
-
     user-select: none;
 
     input[type="checkbox"] {
         display: none;
     }
-    label {
+    label[for="responsive-toggle"]:first-child {
+        .icon('before', 'hamburger-icon', 'info_alt', 20);
         cursor: pointer;
     }
 
@@ -50,10 +50,19 @@
         border-right: 1px solid @brand-color-lighter;
         padding-right: 2px;
     }
-}
 
-label[for="responsive-toggle"] {
-    .icon('before', 'hamburger-icon', 'info_alt', 20);
+    // Create second, invisible toggle that closes the menu when clicked/touched
+    // outside of the menu
+    label[for="responsive-toggle"]:last-child {
+        display: none;
+
+        position: fixed;
+        top: @header-bar-container-height;
+        right: 0;
+        bottom: 0;
+        left: @responsive-menu-width;
+        height: 100vh;
+    }
 }
 
 #responsive-navigation {
@@ -65,6 +74,10 @@ label[for="responsive-toggle"] {
     left: (-@responsive-menu-width - @responsive-menu-shadow-width);
     &.visible {
         left: 0;
+
+        + label[for="responsive-toggle"] {
+            display: initial;
+        }
     }
 
     position: fixed;
@@ -324,6 +337,10 @@ label[for="responsive-toggle"] {
     .visible-sidebar {
         right: 0 !important;
         transition: right 300ms;
+
+        #layout-sidebar& #sidebar-shadow-toggle {
+            display: initial;
+        }
     }
 
     #layout-sidebar {
@@ -366,6 +383,19 @@ label[for="responsive-toggle"] {
                 display: none;
             }
             margin-right: 0;
+        }
+
+        // Create second, invisible toggle that closes the menu when
+        // clicked/touched outside of the menu
+        #sidebar-shadow-toggle {
+            position: fixed;
+            top: @header-bar-container-height;
+            right: @responsive-menu-width;
+            bottom: 0;
+            left: 0;
+            height: 100vh;
+
+            display: none;
         }
     }
     #index,
